[package]
name = "tuya-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
authors = ["bennesp"]
description = "Tuya v3.3 local device protocol — TCP connection, packet codec, AES encryption"
license = "MIT"
repository = "https://github.com/bennesp/robottino-rs"
documentation = "https://docs.rs/tuya-rs"
readme = "README.md"
keywords = ["tuya", "iot", "smart-home"]
categories = ["network-programming"]
exclude = ["tests/", "testdata/"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
cipher = "0.4"
thiserror = "2"
crc32fast = "1"
md-5 = "0.10"

# Cloud-only (OEM API signing, login)
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
num-bigint = { version = "0.4", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
cloud = ["dep:hmac", "dep:sha2", "dep:num-bigint", "dep:uuid", "dep:reqwest", "dep:tokio"]
