[package]
name = "xplorer-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "X-Plorer Serie 75 S / Serie 95 S vacuum cleaner — local control and cloud maps"
license = "MIT"
repository = "https://github.com/bennesp/robottino-rs"
keywords = ["tuya", "vacuum", "robot", "smart-home"]
categories = ["network-programming"]

[dependencies]
tuya-rs = { path = "../tuya-rs", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
lz4_flex = "0.12"
thiserror = "2"

# Cloud-only (example download_map uses reqwest directly)
reqwest = { version = "0.13", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

# Map rendering
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

[features]
default = []
cloud = ["tuya-rs/cloud", "dep:reqwest", "dep:tokio"]
render = ["dep:image"]

[[example]]
name = "download_map"
required-features = ["cloud", "render"]
