[package]
name = "xplorer-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
authors = ["bennesp"]
description = "X-Plorer Serie 75 S / Serie 95 S vacuum cleaner — local control and cloud maps"
license = "MIT"
repository = "https://github.com/bennesp/robottino-rs"
documentation = "https://docs.rs/xplorer-rs"
readme = "README.md"
keywords = ["tuya", "vacuum", "robot", "smart-home"]
categories = ["network-programming", "hardware-support"]
exclude = ["testdata/"]

[dependencies]
tuya-rs = { path = "../tuya-rs", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
lz4_flex = "0.12"
thiserror = "2"

# Cloud-only (example download_map uses reqwest directly)
reqwest = { version = "0.13", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

# Map rendering
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
cloud = ["tuya-rs/cloud", "dep:reqwest", "dep:tokio"]
render = ["dep:image"]

[[example]]
name = "download_map"
required-features = ["cloud", "render"]

[[example]]
name = "cloud_control"
required-features = ["cloud"]

[[example]]
name = "cloud_discover"
required-features = ["cloud"]
